# AstarothCipher

./: .gitignore  CMakeLists.txt  README.md  package.json
include/: aes_gcm.h  hybrid.h  ras_keys.h  rsa_keys.h  secure_alloc.h
public/: crypto_engine.js  crypto_engine.wasm  index.html  vercel.json
src/: aes_gcm.cpp  hybrid.cpp  main.cpp  rsa_keys.cpp  wasm_wrapper.cpp
tests/: test_aes.cpp  test_folder.cpp  test_hybrid.cpp  test_rsa.cpp
